# proffer

./: Cargo.toml  README.md
.circleci/: config.yml
src/: associated_types_gen.rs  enum_gen.rs  field_gen.rs  function_gen.rs  generics_gen.rs  impl_gen.rs  lib.rs  module_gen.rs  prelude.rs  struct_gen.rs  trait_gen.rs  traits.rs
src/internal/: mod.rs
src/traits/: annotations.rs  attributes.rs  docs.rs  fields.rs  generics.rs  trait_bounds.rs
tests/: annotation_gen_test.rs  enum_gen_test.rs  function_gen_test.rs  impl_gen_test.rs  module_gen_test.rs  struct_gen_test.rs  trait_gen_test.rs
tests/utilities/: mod.rs
