[package]
name = "proffer"
version = "1.0.0-rc2"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"
description = "Rust code generation"
keywords = ["code", "generation", "generate"]
homepage = "https://github.com/milesgranger/proffer"
repository = "https://github.com/milesgranger/proffer"
documentation = "https://docs.rs/crate/proffer/"
license-file = "LICENSE"
exclude = [".circleci/config.yml"]
readme = "README.md"
categories = ["development-tools", "development-tools::build-utils"]

[badges]
circle-ci = { repository = "milesgranger/proffer", branch = "master" }

[dependencies]
serde = { version = "1", features = ["derive"] }
tera = "0.11"

[dev-dependencies]
syn = { version = "1.0.7", default-features = false, features = ["parsing", "full"] }
